--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,9 +5,13 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="15" />
+        android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher_2"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
